--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "react": "16.8.3",
-    "react-native": "0.59.8"
+    "react-native": "0.59.8",
+    "ws": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
